# Jipp_Projekt_ZS_NS

./: .gitignore  README.md
FilmManager/: CMakeLists.txt  addepisodedialog.cpp  addepisodedialog.h  addepisodedialog.ui  addmoviedialog.cpp  addmoviedialog.h  addmoviedialog.ui  addpersondialog.cpp  addpersondialog.h  addpersondialog.ui  addseriedialog.cpp  addseriedialog.h  addseriedialog.ui  displayhelpers.cpp  displayhelpers.h  episodelistviewwidget.cpp  episodelistviewwidget.h  episodelistviewwidget.ui  episodeviewwidget.cpp  episodeviewwidget.h  episodeviewwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modifyepisodedialog.cpp  modifyepisodedialog.h  modifyepisodedialog.ui  modifymoviedialog.cpp  modifymoviedialog.h  modifymoviedialog.ui  modifypersondialog.cpp  modifypersondialog.h  modifypersondialog.ui  modifyseriedialog.cpp  modifyseriedialog.h  modifyseriedialog.ui  movielistviewwidget.cpp  movielistviewwidget.h  movielistviewwidget.ui  (+18 more)
FilmManager/FilmManager_Domain/: CMakeLists.txt  FilmManager_Domain_global.h  entry.cpp  entry.h  episode.cpp  episode.h  episodemanager.cpp  episodemanager.h  filmmanager_domain.cpp  filmmanager_domain.h  genre.cpp  genre.h  movie.cpp  movie.h  moviemanager.cpp  moviemanager.h  person.cpp  person.h  personmanager.cpp  personmanager.h  qstringhelpers.h  serie.cpp  serie.h  serieStatus.cpp  serieStatus.h  seriesmanager.cpp  seriesmanager.h  titleentry.cpp  titleentry.h
